@@ -5,6 +5,8 @@ cdebconf (0.75) UNRELEASED; urgency=low
       newt frontend, this appears as text at the top left-hand corner of the
       screen. This is to be used for top-level operational modes of the
       installer, such as rescue mode.
+    - Fix text frontend segfault when encountering empty elements in Choices
+      field (closes: #256557).
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 22:51:59 +0000
 
